--- a/src/pages/care-plan/su-goals-edit.html
+++ b/src/pages/care-plan/su-goals-edit.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html" />
+<link rel="import" href="../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 
 <link rel="import" href="../../elements/media-queries/media-queries.html" />
 <link rel="import" href="../../elements/guuey-date-input/guuey-date-input.html" />
@@ -237,7 +238,7 @@
                     <paper-checkbox disabled checked></paper-checkbox>
                   </td>
                   <td>
-                    
+
                   </td>
                 </tr>
               </tbody>
