--- a/src/pages/care-plan/su-risk-edit.html
+++ b/src/pages/care-plan/su-risk-edit.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
+<link rel="import" href="../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 
 <link rel="import" href="../../elements/guuey-slider/guuey-slider.html" />
 <link rel="import" href="../../elements/guuey-date-input/guuey-date-input.html" />
