minor changes to su-medication edit (purple fab)

--- a/src/pages/care-plan/su-medication-edit.html
+++ b/src/pages/care-plan/su-medication-edit.html
@@ -78,7 +78,8 @@
 
         <paper-fab
           id="mainFab"
-          icon="icons:check"
+          class="save-fab"
+          icon="icons:save"
           on-tap="saveEditMed">
         </paper-fab>
 
