--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -321,6 +321,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .full{
         @apply(--app-grid-expandible-item);
       }
+
+      .save-fab {
+        background-color: #673AB7;
+        color: #FFFFFF;
+      }
     </style>
   </template>
 </dom-module>
