--- a/src/my-app.html
+++ b/src/my-app.html
@@ -758,6 +758,20 @@
             name="su-medication-edit"
             param="[[param]]">
           </su-medication-edit>
+
+          <su-medication-history-edit
+            user-uid="[[userUid]]"
+            current-page="[[currentPage]]"
+            current-cat="[[currentCat]]"
+            intended-cat="[[intendedCat]]"
+            page="[[page]]"
+            patient="[[patient]]"
+            home="[[home]]"
+            user="{{user}}"
+            name="su-medication-history-edit"
+            param="[[param]]">
+          </su-medication-history-edit>
+
           <su-pre
             user-uid="[[userUid]]"
             current-page="[[currentPage]]"
