--- a/src/pages/care-plan/su-medication.html
+++ b/src/pages/care-plan/su-medication.html
@@ -237,128 +237,6 @@
 
     </paper-dialog>
 
-    <paper-dialog id="medModal" class="guuey-modal guuey-add-modal">
-
-      <h2>Add Medication</h2>
-
-      <span id="formField">
-        <paper-input
-          class="left-partial"
-          label="Medication Name"
-          value="{{newMed.medicine}}"
-          required
-          auto-validate
-          pattern="[a-zA-Z\s]*"
-          error-message="Please enter a valid medicine name.">
-        </paper-input>
-
-        <vaadin-combo-box
-          class="dialogHalf"
-          allow-custom-status
-          label="Method"
-          value="{{newMed.method}}"
-          items="[[medMethods]]"
-          required
-          auto-validate
-          error-message="Please select a method.">
-        </vaadin-combo-box>
-        <!--need units of meds-->
-        <paper-input
-          class="dialogHalf"
-          label="Dosage"
-          value="{{newMed.dosage}}"
-          required
-          auto-validate
-          pattern="\d{1,4}[a-zA-Z\s]*"
-          error-message="Please enter in the following format: (number) (units).">
-        </paper-input>
-
-        <paper-textarea
-          label="Comments"
-          value="{{newMed.comment}}">
-        </paper-textarea>
-
-        <guuey-time-chunk-selector
-          required
-          name="Time of Day"
-          value="{{newMed.timeChunk}}">
-        </guuey-time-chunk-selector>
-
-        <guuey-weekday-selector
-          required
-          name="Weedays Taken"
-          value="{{newMed.weekdays}}">
-        </guuey-weekday-selector>
-      </span>
-
-      <div class="modal-button-container">
-        <paper-button class="cancel-button" dialog-dismiss>Cancel</paper-button>
-        <paper-button class="confirm-button" on-tap="saveMed">Save</paper-button>
-      </div>
-
-    </paper-dialog>
-
-    <paper-dialog id="editMedModal" class="guuey-modal guuey-view-modal">
-
-      <h2>Edit/View Medication</h2>
-
-      <span id="formField2">
-        <paper-input
-          label="Medication Name"
-          value="{{newMedEdit.medicine}}"
-          required
-          auto-validate
-          pattern="[a-zA-Z\s]*"
-          error-message="Please enter a valid medicine name.">
-        </paper-input>
-
-        <vaadin-combo-box
-          class="dialogHalf"
-          allow-custom-status
-          label="Method"
-          value="{{newMedEdit.method}}"
-          items="[[medMethods]]"
-          required
-          auto-validate
-          error-message="Please select a method.">
-        </vaadin-combo-box>
-        <!--need units of meds-->
-        <paper-input
-          class="dialogHalf"
-          label="dosage"
-          value="{{newMedEdit.dosage}}"
-          required
-          auto-validate
-          pattern="\d{1,4}[a-zA-Z\s]*"
-          error-message="Please enter in the following format: (number) (units).">
-        </paper-input>
-
-        <paper-textarea
-          label="Comments"
-          value="{{newMedEdit.comment}}">
-        </paper-textarea>
-
-        <guuey-time-chunk-selector
-          required
-          name="Time of Day"
-          value="{{newMedEdit.timeChunk}}">
-        </guuey-time-chunk-selector>
-
-        <guuey-weekday-selector
-          required
-          name="Weedays Taken"
-          value="{{newMedEdit.weekdays}}">
-        </guuey-weekday-selector>
-      </span>
-
-      <div class="modal-button-container">
-        <paper-icon-button class="delete-button" icon="icons:delete-forever" on-tap="deleteMed"></paper-icon-button>
-        <paper-button class="cancel-button" dialog-dismiss>Cancel</paper-button>
-        <paper-button class="confirm-button" on-tap="saveEditMed">Save</paper-button>
-      </div>
-
-    </paper-dialog>
-
     <paper-dialog id="editTimeDialog" class="paper-time-picker-dialog">
 
       <paper-time-picker
@@ -370,42 +248,6 @@
         <paper-button dialog-dismiss>Cancel</paper-button>
         <paper-button on-tap="saveEditTime">Save Changes</paper-button>
       </div>
-
-    </paper-dialog>
-
-    <paper-dialog id="medPointModal">
-      <h2>Entry as of [[_computeTimeOfChange(newMedHistory.log.time)]]</h2>
-      <h3>Change Details</h3>
-      <p>
-        Changed by [[_computeUserDisplay(newMedHistory.log, usersData)]] on [[_computeTimeOfChange(newMedHistory.log.time)]]
-      </p>
-
-      <h3>Medication Details</h3>
-      <p>
-        [[newMedHistory.medicine]]
-        <br />
-        [[newMedHistory.method]]
-        <br />
-        [[newMedHistory.dosage]]
-        <br />
-        [[newMedHistory.comments]]
-      </p>
-
-      <p>
-        Times of Day to Take:
-        <template is="dom-repeat" items="[[newMedHistory.timeChunk]]" as="chunk">
-          <br />
-          [[chunk]]
-        </template>
-      </p>
-
-      <p>
-        Weekdays to Take:
-        <template is="dom-repeat" items="[[newMedHistory.weekdays]]" as="day">
-          <br />
-          [[day]]
-        </template>
-      </p>
 
     </paper-dialog>
 
@@ -954,11 +796,6 @@
         Polymer.guueyFormValidationBehavior
       ],
 
-      _returnThis: function() {
-        console.log(this.offsetHeight);
-        return this;
-      },
-
       startNewMed: function() {
         this.$.medDB.path = null;
         this.$.medDB.data = {};
@@ -977,104 +814,36 @@
           }.bind(this));
       },
 
-      saveMed: function() {
-        var validation = this.validateInputs(this.$.formField);
-        if(validation.invalid) {
-          this.fire("openToast", {toastText: "The following items are missing or invalid: " + validation.invalidInputs});
-        } else {
-          this.$.medDB.path = null;
-          this.$.medDB.data = {};
-          if(this.newMed.timeChunk && this.newMed.medicine) {
-            var medPath = "homes/" + this.home + "/patients/" + this.patient + "/medicationOutline/medications";
-            this.$.medDB.save(medPath, null)
-              .then(function() {
-                var medId = this.$.medDB.path.split("/").pop();
-                var notifyTarget = this.$.medDB.path.slice(medPath.length + 1);
-                this.$.medDB.data.med = this.newMed;
-                this.$.medDB.data.log = {};
-                this.$.medDB.data.log.user = this.user.uid;
-                this.$.medDB.data.log.time = Date.now();
-                this.$.medDB.save(this.$.medDB.path, null)
-                  .then(function() {
-                    var medItemId = this.$.medDB.path.split("/").pop();
-                    this.fire("newMedSaved", {medId: medId, medItemId: medItemId});
-                    this.newMed = {};
-                    //guuey-notify goes here
-                    this.$.dailyMedNotify.notifyRoute = this.$.medDB.path;
-                    this.$.dailyMedNotify.notifyMessage = this.suBasicInfo.fName + " has medication that is ready to be taken within the hour.";
-                    this.$.dailyMedNotify.notifyTarget = notifyTarget;
-                    this.$.dailyMedNotify.initialize();
-                  }.bind(this));
-              }.bind(this));
-            this.$.medModal.toggle();
-          } else {
-            this.fire("openToast",{toastText: "Please make sure that you have set a name and a time of day (morning, afternoon etc) for this new medication."});
-          };
-        };
-      },
-
       viewChanges: function(e) {
         this.newMedHistory = e.model.med;
-        this.$.medPointModal.toggle();
+        this.$.medDB.path = null;
+        this.$.medDB.data = {};
+        var medHistoryId = this.newMedHistory.parent;
+        var medItemId = this.newMedHistory.key;
+        var url = '/' + this.home + '/care-plan/su-medication-history-edit/' + this.patient + '/' + medHistoryId + '$' + medItemId;
+        window.history.pushState({}, null, url);
+        window.dispatchEvent(new CustomEvent('location-changed'));
       },
 
       editMed: function(e) {
         this.newMedEdit = e.model.med;
-        this.$.editMedModal.toggle();
+        this.$.medDB.path = null;
+        this.$.medDB.data = {};
+        var medHistoryId = this.newMedEdit.parent;
+        var medItemId = this.newMedEdit.key;
+        var url = '/' + this.home + '/care-plan/su-medication-edit/' + this.patient + '/' + medHistoryId + '$' + medItemId;
+        window.history.pushState({}, null, url);
+        window.dispatchEvent(new CustomEvent('location-changed'));
       },
 
       saveEditMed: function() {
-
-        var validation = this.validateInputs(this.$.formField2);
-        if(validation.invalid) {
-          this.fire("openToast", {toastText: "The following items are missing or invalid: " + validation.invalidInputs});
-        } else {
-          this.$.medDB.path = null;
-          var editPath = this.newMedEdit.parent;
-          console.log(editPath);
-          console.log(this.newMedEdit);
-          this.newMedEdit.parent = null;
-          this.newMedEdit.newest = null;
-          this.newMedEdit.differences = null;
-          this.$.medDB.data.med = this.newMedEdit;
-          this.$.medDB.data.log = {};
-          this.$.medDB.data.log.user = this.user.uid;
-          this.$.medDB.data.log.time = Date.now();
-          this.$.medDB.save("homes/" + this.home + "/patients/" + this.patient + "/medicationOutline/medications/" + editPath, null)
-            .then(function(med) {
-              var medItemId = this.$.medDB.path.split("/").pop();
-              this.fire("medEditSaved", {medId: editPath, medItemId: medItemId});
-              //guuey notify goes here
-              this.$.dailyMedNotify.notifyRoute = this.$.medDB.path;
-              this.$.dailyMedNotify.notifyMessage = this.suBasicInfo.fName+" has medication that is ready to be taken within the hour.";
-              this.$.dailyMedNotify.notifyTarget = editPath;
-              this.$.dailyMedNotify.initialize();
-            }.bind(this));
-          this.$.editMedModal.toggle();
-          this.newMedEdit = {};
-          this.clearValidation(this.$.formField2);
-        };
-      },
-
-      deleteMed: function() {
         this.$.medDB.path = null;
-        var editPath = this.newMedEdit.parent;
-        this.newMedEdit.parent = null;
-        this.$.medDB.data.med = this.newMedEdit;
-        this.$.medDB.data.med.archived = true;
-        this.$.medDB.data.log = {};
-        this.$.medDB.data.log.user = this.user.uid;
-        this.$.medDB.data.log.time = Date.now();
-        this.$.medDB.save("homes/" + this.home + "/patients/" + this.patient + "/medicationOutline/medications/" + editPath, null)
-          .then(function(med) {
-            var medItemId = this.$.medDB.path.split("/").pop();
-            this.fire("medDeleted", {medId: editPath, medItemId: medItemId});
-            //guuey notify goes here
-            var suffixes = ["morning","afternoon","evening","night"];
-            this.$.dailyMedNotify.deNotify(this.home, editPath, suffixes);
-          }.bind(this));
-        this.$.editMedModal.toggle();
-        this.newMedEdit = {};
+        this.$.medDB.data = {};
+        var medHistoryId = this.newMedEdit.parent;
+        var medItemId = this.newMedEdit.key;
+        var url = '/' + this.home + '/care-plan/su-medication-edit/' + this.patient + '/' + medHistoryId + '$' + medItemId;
+        window.history.pushState({}, null, url);
+        window.dispatchEvent(new CustomEvent('location-changed'));
       },
 
       openTimeChunkOptions: function(e) {
@@ -1168,6 +937,7 @@
             };
             medCandidate = medCandidate.med;
             medCandidate.parent = x;
+            medCandidate.key = y;
             currentMedList.push(medCandidate);
           };
         };
