updated ad-users with dialogless paradigm

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -908,6 +908,18 @@
             home="[[home]]"
             name="ad-users">
           </ad-users>
+          <ad-users-edit
+            user="[[user]]"
+            user-uid="[[userUid]]"
+            current-page="[[currentPage]]"
+            current-cat="[[currentCat]]"
+            intended-cat="[[intendedCat]]"
+            page="[[page]]"
+            user={{user}}
+            home="[[home]]"
+            name="ad-users-edit"
+            param="[[param]]">
+          </ad-users-edit>
           <ad-settings
             user-uid="[[userUid]]"
             current-page="[[currentPage]]"
