updated report tabs to all use .green-tabs class, updated home title with logo image... needs rework...

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -599,9 +599,7 @@
             </paper-tabs>
 
             <div id="bottomNavTitle" class="bottom-nav-title">
-              <p>
-                Mosaic Care
-              </p>
+              <img src="/images/mosaic-logo-white.png" />
             </div>
             <paper-progress bottom-item class="mainProgress" indeterminate></paper-progress>
           </app-toolbar>
